# rest-apis-flask-python

./: pyproject.toml
section11 - self/: app.py  blocklist.py
section11 - self/models/: user.py
section11 - self/resources/: item.py  store.py  user.py
section3 - self/: app.py
section3new - self/: app.py
section4 - self/: app.py
section5/: user.py
section5 - self/: app.py  create_tables.py  item.py  security.py  user.py
section5new_self/: .flaskenv  pyproject.toml
section5new_self/resources/: item.py  store.py
section6 - self/: app.py
section6 - self/models/: item.py  store.py  user.py
section6 - self/resources/: item.py  store.py  user.py
section6new_self/: app.py  pyproject.toml  schema.py
section6new_self/models/: item.py  store.py
section6new_self/resources/: item.py
section7new - self/: Dockerfile  app.py  schema.py
section7new - self/models/: __init__.py  item.py  store.py  tag.py
section7new - self/resources/: store.py  tag.py
